welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: type mismatch;
 found   : Unit
 required: Boolean
def checkSortie():Boolean = {gauche();if (estFaceMur()) {return false} else return true;droite()}
                                                                                              ^